--- a/deps/module-vfs_template.yaml
+++ b/deps/module-vfs_template.yaml
@@ -2,9 +2,9 @@ version: 0
 case-sensitive: false
 use-external-names: false
 roots:
-  - name: "@INCLUDE_DIR@"
+  - name: "@raylib_DIR@"
     type: directory
     contents:
       - name: module.modulemap
         type: file
-        external-contents: "@MODULEMAP_FILE@"
+        external-contents: "@raylib_MODULEMAP@"
