--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,15 @@ if(PROJECT_BINARY_DIR STREQUAL PROJECT_SOURCE_DIR)
   )
 endif()
 
+
 set(CMAKE_OSX_DEPLOYMENT_TARGET 13.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 #set(BUILD_SHARED_LIBS OFF)
+
+if(MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
 
 project(SwiftEngine LANGUAGES Swift CXX C)
 set(CMAKE_EXE_LINKER_FLAGS_DISTRIBUTION "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
